# mycpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
src/cpp/: array_vector.cpp  display.cpp  fibon_elem.cpp  write_read.cpp
src/gc/: Makefile  a.c  b.c  dynamic_arrays.c  main.c  test.c
src/tcpl/: char_count.c  ex1_9.c  getchar.c  line_count.c  modern.c  word_count.c
